--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,4 +1,7 @@
-deploy.ant.properties.file=C:\\Users\\Usuario\\AppData\\Roaming\\NetBeans\\8.2\\tomcat80.properties
-j2ee.server.home=C:/Users/Usuario/Desktop/is2/tomcat/apache-tomcat-8.5.14
-j2ee.server.instance=tomcat80:home=C:\\Users\\Usuario\\Desktop\\is2\\tomcat\\apache-tomcat-8.5.14
-user.properties.file=C:\\Users\\Usuario\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
+deploy.ant.properties.file=/Users/Admin/Library/Application Support/NetBeans/8.2/tomcat80.properties
+j2ee.server.home=/Users/Admin/Documents/Documentos/Facu/2017 - 1/Inge 2 Final/apache-tomcat-8.5.14
+j2ee.server.instance=tomcat80:home=/Users/Admin/Documents/Documentos/Facu/2017 - 1/Inge 2 Final/apache-tomcat-8.5.14
+javac.debug=true
+javadoc.preview=true
+selected.browser=default
+user.properties.file=/Users/Admin/Library/Application Support/NetBeans/8.2/build.properties
