--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -4,6 +4,7 @@ annotation.processing.processor.options=-Aeclipselink.canonicalmodel.use_static_
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+auxiliary.org-netbeans-modules-web-clientproject-api.js_2e_libs_2e_folder=js/libs
 build.classes.dir=${build.web.dir}/WEB-INF/classes
 build.classes.excludes=**/*.java,**/*.form
 build.dir=build
@@ -29,10 +30,10 @@ dist.war=${dist.dir}/${war.name}
 endorsed.classpath=\
     ${libs.javaee-endorsed-api-7.0.classpath}
 excludes=
-file.reference.javaee-web-api-7.0.jar=C:\\Users\\Usuario\\Desktop\\is2\\javaee-web-api-7.0.jar
-file.reference.javax.ws.rs-api-2.0.1.jar=C:\\Users\\Usuario\\Desktop\\is2\\libreria jersey\\jaxrs-ri\\api\\javax.ws.rs-api-2.0.1.jar
-file.reference.postgresql-42.0.0.jar=C:\\Users\\Usuario\\Desktop\\is2\\tomcat\\apache-tomcat-8.5.14\\bin\\postgresql-42.0.0.jar
-file.reference.postgresql-8.3-603.jdbc4.jar=C:\\Users\\Usuario\\Desktop\\is2\\postgresql-8.3-603.jdbc4.jar
+file.reference.javaee-web-api-7.0.jar-1=librerias/javaee-web-api-7.0.jar
+file.reference.javax.ws.rs-api-2.0.1.jar-1=librerias/javax.ws.rs-api-2.0.1.jar
+file.reference.json-simple-1.1.1.jar=librerias/json-simple-1.1.1.jar
+file.reference.postgresql-8.3-603.jdbc4.jar-1=librerias/postgresql-8.3-603.jdbc4.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
@@ -45,10 +46,10 @@ javac.classpath=\
     ${libs.eclipselink.classpath}:\
     ${libs.restapi.classpath}:\
     ${libs.restlib.classpath}:\
-    ${file.reference.postgresql-42.0.0.jar}:\
-    ${file.reference.javaee-web-api-7.0.jar}:\
-    ${file.reference.javax.ws.rs-api-2.0.1.jar}:\
-    ${file.reference.postgresql-8.3-603.jdbc4.jar}
+    ${file.reference.javaee-web-api-7.0.jar-1}:\
+    ${file.reference.javax.ws.rs-api-2.0.1.jar-1}:\
+    ${file.reference.json-simple-1.1.1.jar}:\
+    ${file.reference.postgresql-8.3-603.jdbc4.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
@@ -76,7 +77,6 @@ javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
 lib.dir=${web.docbase.dir}/WEB-INF/lib
-no.dependencies=false
 persistence.xml.dir=${conf.dir}
 platform.active=default_platform
 resource.dir=setup
